<resources>
    <string name="app_name">Freedom Of Information</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hellooooooo</string>
    <string name="sections">The Act In Sections</string>
    <string name="AboutFOI">About FOI App</string>
    <string name="mediarightsagenda">Media Rights Agenda</string>
    <string name="fordfoundation">About Ford Foundation</string>
    <string name="ekoconnect">About Eko Connect</string>
    <string name="contactus">Contact Us</string>
    <string name="title_activity_acts_sections">The Act In Sections</string>
    <string name="b1">EXPLANATORY MEMORANDUM</string>
    <string name="b2">FREEDOM OF INFORMATION ACT,\n 2011.</string>
    <string name="b3">1.Rights of access to records.</string>
    <string name="b4">2.Information about public institution.</string>
    <string name="b5">3.Request for access to records.</string>
    <string name="b6">4.Time for granting or refusing\n application.</string>
    <string name="b7">5.Transfer of application.</string>
    <string name="b8">6.Extension of time limit for granting\n or refusing application.</string>
    <string name="b9">7.Where access is refused.</string>
    <string name="b10">8.Fees.</string>
    <string name="b11">9.Record keeping and maintenance\n of records.</string>
    <string name="b12">10.Destruction or falsification\n of records.</string>
    <string name="b13">11.Exemption of international affairs\n and defence.</string>
    <string name="b14">12.Exemption of law enforcement\n and investigation.</string>
    <string name="b15">13.Training of officials on the right\n to information and on the effective \nimplementation of this Act.</string>
    <string name="b16">14.Exemption of personal information.</string>
    <string name="b17">15.Exemption of third party information.</string>
    <string name="b18">16.Exemption of personal or other privileges\n conferred by law.</string>
    <string name="b19">17.Exemption of course or research\n material.</string>
    <string name="b20">18.Severability.</string>
    <string name="b21">19.Denial by a public institution to\n disclose records.</string>
    <string name="b22">20.Judicial review.</string>
    <string name="b23">21.Hearing in a summary way.</string>
    <string name="b24">22.Access to information by the Court.</string>
    <string name="b25">23.Court to take precautions against \ndisclosing information.</string>
    <string name="b26">24.Burden of proof .</string>
    <string name="b27">25.Order to disclose information.</string>
    <string name="b28">26.Exempted materials. </string>
    <string name="b29">27.Protection of public officers.</string>
    <string name="b30">28.Documents under classification.</string>
    <string name="b31">29.Submission of reports.</string>
    <string name="b32">30.Complimentary procedures.</string>
    <string name="b33">31.Interpretation. </string>
    <string name="b34">32.Citation, Certification \n and Schedule to FOI Act,2011.</string>
    <string name="title_activity_section1">EXPLANATORY MEMORANDM</string>
    <string name="title_activity_section2">FREEDOM OF INFORMATION ACT,2011</string>
    <string name="title_activity_section3">RIGHT OF ACCESS TO RECORDS</string>
    <string name="title_activity_section4">INFORMATION ABOUT PUBLIC INSTITUTIONS</string>
    <string name="title_activity_section5">REQUEST FOR ACCESS TO RECORDS</string>
    <string name="title_activity_section6">TIME FOR GRANTING OR REFUSING APPLICATION</string>
    <string name="title_activity_section7">TRANSFER OF APPLICATION</string>
    <string name="title_activity_section8">EXTENSION OF TIME LIMIT FOR GRANTING OR REFUSING APPLICATION</string>
    <string name="title_activity_section9">WHERE ACCESS IS REFUSED</string>
    <string name="title_activity_section10">FEES</string>
    <string name="title_activity_section11">RECORD KEEPING AND MAINTENANCE OF RECORDS</string>
    <string name="title_activity_section12">DESTRUCTION OR FALSIFICATION OF RECORDS</string>
    <string name="title_activity_section13">EXEMPTION OF INTERNATIONAL AFFAIRS AND DEFENCE</string>
    <string name="title_activity_section14">EXEMPTION OF LAW ENFORCEMENT AND INVESTIGATION</string>
    <string name="title_activity_section15">TRAINING OF OFFICIALS ON THE RIGHT TO INFORMATION AND ON THE EFFECTIVE IMPLEMENTATION OF THIS ACT.</string>
    <string name="title_activity_section16">EXEMPTION OF PERSONAL INFORMATION</string>
    <string name="title_activity_section17">EXEMPTION OF THIRD PARTY INFORMATION.</string>
    <string name="title_activity_section18">EXEMPTION OF PERSONAL OR OTHER PRIVILEGES CONFERRED BY LAW</string>
    <string name="title_activity_section19">EXEMPTION OF COURSE OR RESEARCH MATERIAL</string>
    <string name="title_activity_section20">SEVERABILITY</string>
    <string name="title_activity_section21">DENIAL BY A PUBLIC INSTITUTE TO DISCLOSE RECORDS.</string>
    <string name="title_activity_section22">JUDICIAL REVIEW</string>
    <string name="title_activity_section23">HEARING IN A SUMMARY WAY</string>
    <string name="title_activity_section24">ACCESS TO INFORMATION BY THE COURT</string>
    <string name="title_activity_section25">COURT TO TAKE PRECAUTIONS AGAINST DISCLOSING</string>
    <string name="title_activity_section26">BURDEN OF PROOF</string>
    <string name="title_activity_section27">ORDER TO DISCLOSE INFORMATION</string>
    <string name="title_activity_section28">EXEMPTED MATERIALS</string>
    <string name="title_activity_section29">PROTECTION OF PUBLIC OFFICERS</string>
    <string name="title_activity_section30">DOCUMENTS UNDER CLASSIFICATION.</string>
    <string name="title_activity_section31">SUBMISSION OF REPORTS</string>
    <string name="title_activity_section32">COMPLIMENTARY PROCEDURES.</string>
    <string name="title_activity_section33">INTERPRETATION.</string>
    <string name="title_activity_section34">CITATION, CERTIFICATION AND SCHEDULE TO FOI ACT, 2011</string>
    <string name="descript">The Nigerian Coat Of Arms.</string>
    <string name="text1">An Act to make public records and information more freely available, provide for public access to public records and 
information, protect public records and information to the extent consistent with the public interest and the protection of 
personal privacy, protect serving public officers from adverse consequences  of  disclosing certain kinds of official 
information without authorization and establish procedures for the achievement of those purposes and; for related matters</string>
    <string name="text2">An Act to make public records and information more freely available, provide for public access to public records and 
information, protect public records and information to the extent consistent with the public interest and the protection of 
personal privacy, protect serving public officers from adverse consequences  of  disclosing certain kinds of official 
information without authorization and establish procedures for the achievement of those purposes\n 
ENACTED by the National Assembly of the Federal Republic of Nigeria as follows;</string>
    <string name="text3">(1)  Notwithstanding anything contained in any other Act, law or regulation, the right of any person to access or 
request information, whether or not contained in any written form, which is in  the  custody or possession of any 
public official, agency or institution howsoever described, is established. \n
(2)  An applicant under this Act needs not demonstrate any specific interest in the information being applied for. \n
(3)  Any person entitled to the right to information under  this  Act, shall have the right to institute proceedings in 
the Court to compel any public institution to comply with the provisions of  this Act.</string>
    <string name="text30">(1)  The fact that any information in the custody of a public institution is kept by that institution under security 
classification or is classified document within the meaning of the Official Secrets Act does not preclude it from being 
disclosed pursuant to an  application for disclosure thereof under the provisions of this Act, but in every case the 
public institution to which the application is made shall decide whether such information is of a type referred to in 
Sections 11,12,14,15,16,17,19,20 or 21 of this Act. 
(2)   If the public institution to which the application in subsection (1) is made decides that such information is not 
a type mentioned in the sections referred to in subsection (1), access to such information shall be given to the 
applicant. 
(3)   if the public institution, to which the application mentioned in subsection (1) is made, decides that such 
information is of a type mentioned in sections referred to in subsection (1), it shall give notice to the 
applicant. </string>
</resources>