<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bck"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HomeScreen" >

   

    <Button
        android:id="@+id/button1"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:onClick="actInSections"
        android:text="@string/sections" />

    <Button
        android:id="@+id/button2"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/button1"
        android:layout_below="@+id/button1"
        android:layout_marginTop="19dp"
        android:clickable="true"
        android:onClick="aboutFOI"
        android:text="@string/AboutFOI" />

    <Button
        android:id="@+id/button3"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/button2"
        android:layout_below="@+id/button2"
        android:layout_marginTop="14dp"
        android:clickable="true"
        android:onClick="mediaRights"
        android:text="@string/mediarightsagenda" />

    <Button
        android:id="@+id/button4"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_alignLeft="@+id/button3"
        android:layout_below="@+id/button3"
        android:layout_marginTop="13dp"
        android:clickable="true"
        android:onClick="ford"
        android:text="@string/fordfoundation" />

    <Button
        android:id="@+id/button5"
        android:layout_width="200dp"
        android:layout_height="58dp"
        android:layout_alignLeft="@+id/button4"
        android:layout_below="@+id/button4"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:onClick="eko"
        android:text="@string/ekoconnect" />

    <Button
        android:id="@+id/button6"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/button5"
        android:layout_below="@+id/button5"
        android:layout_marginTop="18dp"
        android:clickable="true"
        android:onClick="contacts"
        android:text="@string/contactus" />

</RelativeLayout>